Added a chapter with conclusions

--- a/thesis.tex
+++ b/thesis.tex
@@ -128,7 +128,7 @@
 \input{streamlining.tex}
 \input{cut_elimination.tex}
 \part{Conclusions}
-%\input{chapter9.tex}
+\input{conclusions.tex}
 %\part{Appendices}
 \appendix
 %\input{appendix_a.tex}
