--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -50,13 +50,13 @@ where the mapping is indicated by small numerals.
 \vlinf{\coand}{}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,&\qquad
 \vlinf{\asor}{}{\vls[[\alpha.\beta].\gamma]}
          {\vls[\alpha.[\beta.\gamma]]}                \quad,\qquad
-\vlinf{\asand}{}{\vls((\alpha.\beta).\gamma)}
-         {\vls(\alpha.(\beta.\gamma))}                \quad,      \\
+\vlinf{\asand}{}{\vls(\alpha.(\beta.\gamma))}
+         {\vls((\alpha.\beta).\gamma)}                \quad,      \\
 \noalign{\smallskip}
 \vlinf{\fffd}{}{\vls[\alpha.\fff]}{\alpha}           \quad,\qquad
 \vlinf{\tttd}{}{\vls(\alpha.\ttt)}{\alpha}           \quad,&\qquad
-\vlinf{\fffu}{}{\alpha}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
-\vlinf{\tttu}{}{\alpha}{\vls[\alpha.\fff]}
+\vlinf{\fffu}{}{\alpha}{\vls(\ttt.\alpha)}        \qquad\hbox{and\/}\qquad
+\vlinf{\tttu}{}{\alpha}{\vls[\fff.\alpha]}
 \end{array}
 \]
 all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
