Changed mapping from rules to edges

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -11,7 +11,7 @@ Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such
 %-------------------
 \item there is a surjective map between the set of atom occurrences of\/ $\Phi$ and the set of edges of $\phi$;
 %-------------------
-\item for each inference rule instance $\vlsmash{\vlinf{\rho}{}{\beta}{\alpha}}$ of\/ $\Phi$, where $\rho\in\{\aid,\aiu,\awd,\awu,\acd,\acu\}$, the atom occurrences in $\vlinf{\rho}{}{\beta}{\alpha}$ are mapped to edges of $\phi$ such that the edges are related with vertices as indicated below, for each possible case of the inference rules:
+\item there is a bijective map between the set of structural inference rule instances of\/ $\Phi$ and the set of vertices of $\phi$, such that, for each inference rule $\rho$ that maps to a vertex $\nu$, the label of $\nu$, and the map between the atom occurrences in the premiss (resp., conclusion) of $\rho$ and the upper (resp., lower) edges of $\nu$ are given below, for each possible case of the inference rules:
 \[
 \begin{array}{@{}ccc@{}ccc@{}}
 \vlinf{\aid}{}{\vls[a^\one.{\bar a^\two}]}{\ttt}&\mbox{to\/}&
