--- a/global_transformations/four_boxes.tex
+++ b/global_transformations/four_boxes.tex
@@ -121,6 +121,8 @@ Let $a_1^{\phi}$, $\dots$, $a_n^{\phi}$ be all the atoms whose occurrences map t
 \]
 be the $\ai$-decomposed form of $\Phi$.
 
+We show several intermediate derivations which will be used to build $\Psi$. To make it easier to verify the atomic flow of $\Psi$, we will, through a slight missuse of notation, label the atom occurrences of the intermediate derivations to indicate what atomic flow each atom occurrence will map to once the derivations are combined to create $\Psi$.
+
 Consider the substitution
 \[
 \sigma=\{a_1^\phi/\vlsmallbrackets\vlsbr([a_1^{f_1(\phi)}.a_1^{f_2(\phi)}].[a_1^{f_3(\phi)}.a_1^{f_4(\phi)}]),\dots,a_n^\phi/\vlsmallbrackets\vlsbr([a_n^{f_1(\phi)}.a_n^{f_2(\phi)}].[a_n^{f_3(\phi)}.a_n^{f_4(\phi)}])\}\;.
@@ -210,27 +212,27 @@ For every $1\le i\le n$, there exist derivations
 \]
 which allow us to build
 \[
-\vlder{}{}{\alpha\sigma}{\alpha}
+\vlder{\Psi_\top}{}{\alpha\sigma}{\alpha}
 \quad\mbox{and}\quad
-\vlder{}{}{\beta}{\beta\sigma}
+\vlder{\Psi_\bot}{}{\beta}{\beta\sigma}
 \quad,
 \]
 with atomic flows
 \[
 \atomicflow
 {
-( 0, 0)*{\afacumexsq{f_1(\boldsymbol\epsilon)}{}{f_3(\boldsymbol\epsilon)}{}{}{}52};
-(12,-2)*{\afawdm{}{}{f_2(\boldsymbol\epsilon)}{}};
-(20,-2)*{\afawdm{}{}{f_4(\boldsymbol\epsilon)}{}};
-(24, 0)*{\afvjum{12}{}{g(\boldsymbol\epsilon)}};
+( 0, 0)*{\afacumexsq{f_1(\boldsymbol{\epsilon_1})}{}{f_3(\boldsymbol{\epsilon_1})}{}{}{}52};
+(12,-2)*{\afawdm{}{}{f_2(\boldsymbol{\epsilon_1})}{}};
+(20,-2)*{\afawdm{}{}{f_4(\boldsymbol{\epsilon_1})}{}};
+(24, 0)*{\afvjum{12}{}{g(\boldsymbol{\epsilon_4})}};
 }
 \qquad\mbox{and}\qquad
 \atomicflow
 {
-( 0,0)*{\afacdmexsq{f_1(\boldsymbol\iota)}{}{f_2(\boldsymbol\iota)}{}{}{}52};
-(12,2)*{\afawum{}{}{f_3(\boldsymbol\iota)}{}};
-(20,2)*{\afawum{}{}{f_4(\boldsymbol\iota)}{}};
-(24,0)*{\afvjdm{12}{}{g(\boldsymbol\iota)}};
+( 0,0)*{\afacdmexsq{f_1(\boldsymbol{\iota_1})}{}{f_2(\boldsymbol{\iota_1})}{}{}{}52};
+(12,2)*{\afawum{}{}{f_3(\boldsymbol{\iota_1})}{}};
+(20,2)*{\afawum{}{}{f_4(\boldsymbol{\iota_1})}{}};
+(24,0)*{\afvjdm{12}{}{g(\boldsymbol{\iota_4})}};
 }
 \qquad,
 \]
@@ -239,7 +241,7 @@ Furthermore, for every $1\le i\le n$, there exist derivations
 \[
 \vlderivation
 {
- \vlin{=}{}{\vls[([\vlinf{}{}{a_i^{f_1(\phi)}}{\fff}\;.\;a_i^{f_2(\phi)}]\;.\;[\vlinf{}{}{a_i^{f_3(\phi)}}{\fff}\;.\;a_i^{f_4(\phi)}])\;.\;\vlinf{}{}{\bar a_i^\psi}{\vls[\bar a_i.\bar a_i]}]}
+ \vlin{=}{}{\vls[([\vlinf{}{}{a_i^{f_1(\phi)}}{\fff}\;.\;a_i^{f_2(\phi)}]\;.\;[\vlinf{}{}{a_i^{f_3(\phi)}}{\fff}\;.\;a_i^{f_4(\phi)}])\;.\;\vlinf{}{}{\bar a_i^{g(\psi)}}{\vls[\bar a_i.\bar a_i]}]}
  {
   \vlin{\swi}{}{\vls[\vlinf{\swi}{}{\vls\vlsmallbrackets[(a_i^{f_2(\phi)}.a_i^{f_4(\phi)}).\bar a_i]}{\vls\vlsmallbrackets(a_i^{f_2(\phi)}.[a_i^{f_4(\phi)}.\bar a_i])}\;.\;\bar a_i]}
   {
@@ -256,14 +258,14 @@ and
  {
   \vlin{=}{}{\vls(\vlinf{\swi}{}{\vls[a_i^{f_3(\phi)}.(a_i^{f_4(\phi)}.\bar a_i)]}{\vls([a_i^{f_3(\phi)}.a_i^{f_4(\phi)}].\bar a_i)}\;.\;\bar a_i)}
   {
-   \vlhy{\vls(([\vlinf{}{}{\ttt}{a_i^{f_1(\phi)}}\;.\;\vlinf{}{}{\ttt}{a_i^{f_2(\phi)}}]\;.\;\vlsmallbrackets[a_i^{f_3(\phi)}.a_i^{f_4(\phi)}])\;.\;\vlinf{}{}{\vls(\bar a_i.\bar a_i)}{\bar a_i^\psi})}
+   \vlhy{\vls(([\vlinf{}{}{\ttt}{a_i^{f_1(\phi)}}\;.\;\vlinf{}{}{\ttt}{a_i^{f_2(\phi)}}]\;.\;\vlsmallbrackets[a_i^{f_3(\phi)}.a_i^{f_4(\phi)}])\;.\;\vlinf{}{}{\vls(\bar a_i.\bar a_i)}{\bar a_i^{g(\psi)}})}
   }
  }
 }\quad,
 \]
 which allow us to build
 \[
-\vlder{}{}
+\vlder{\Psi_\ttt}{}
 {
  \vlsmallbrackets\vlsbr([a^\phi_1.\bar a^\psi_1].\cdots.[a^\phi_n.\bar a^\psi_n])\sigma
 }
@@ -271,7 +273,7 @@ which allow us to build
  \ttt
 }
 \quad\mbox{and}\quad
-\vlder{}{}
+\vlder{\Psi_\fff}{}
 {
  \fff
 }
@@ -284,33 +286,34 @@ with atomic flows
 \[
 \atomicflow
 {
-(-10,0)*{\afawdm{}{}{}{}};
-(-6,0)*{\afvjm8};
+(-12,0)*{\afawdm{}{}{f_1(\boldsymbol{\epsilon_2})}{}};
+(-6,0)*{\afvjum8{f_2(\boldsymbol{\epsilon_2})}{}};
 (-4,4)*{\afaidnw{}{}};
-( 0,0)*{\afacdm{}{}{}{}{}{}};
+( 0,0)*{\afacdm{}{}{}{}{g(\boldsymbol{\epsilon_3})}{}};
 ( 4,4)*{\afaidnw{}{}};
-( 6,0)*{\afvjm8};
-(10,0)*{\afawdm{}{}{}{}};
+( 6,0)*{\afvjum8{f_4(\boldsymbol{\epsilon_2})}{}};
+(12,0)*{\afawdm{}{}{f_3(\boldsymbol{\epsilon_2})}{}};
 }
 \qquad\mbox{and}\qquad
 \atomicflow
 {
-(10, 0)*{\afawum{}{}{}{}};
-(6, 0)*{\afvjm8};
-(4,-6)*{\afaiunw{}{}};
-(-0, 0)*{\afacum{}{}{}{}{}{}};
-(-4,-6)*{\afaiunw{}{}};
-(-6, 0)*{\afvjm8};
-(-10, 0)*{\afawum{}{}{}{}};
+(-18, 0)*{\afawum{}{}{f_1(\boldsymbol{\iota_2})}{}};
+(-12, 0)*{\afawum{}{}{f_2(\boldsymbol{\iota_2})}{}};
+(  6, 0)*{\afvjdm8{f_4(\boldsymbol{\iota_2})}{}};
+(  4,-6)*{\afaiunw{}{}};
+(  0, 0)*{\afacum{}{}{}{}{g(\boldsymbol{\iota_3})}{}};
+( -4,-6)*{\afaiunw{}{}};
+( -6, 0)*{\afvjdm8{f_3(\boldsymbol{\iota_2})}{}};
 }
 \qquad,
 \]
 respectively.
 Combining these derivations we can build
 \[
+\Psi\;=\;
 \vlderivation
 {
- \vlde{}{}
+ \vlde{\vls[\Psi_\bot.\Psi_\fff]}{}
  {
   \beta
  }
@@ -320,7 +323,7 @@ Combining these derivations we can build
    \vlsbr[\beta.(a^\phi_n.\bar a^\psi_n).\cdots.(a^\phi_1.\bar a^\psi_1)]\sigma
   }
   {
-   \vlde{}{}
+   \vlde{\vls(\Psi_\ttt.\Psi_\top)}{}
    {
     \vlsbr([a^\phi_1.\bar a^\phi_1].\cdots.[a^\phi_n.\bar a^\phi_n].\alpha)\sigma
    }
